<resources>
    <string name="app_name">Fast SMS</string>
    <string name="send">SEND</string>
    <string name="title_initial"> (Save details of your Fast SMS)</string>
    <string name="title_final"> (Your Fast SMS is Ready)</string>

    <string name="action_settings">Learn how to Use</string>
    <string name="action_info">Info.</string>

    <string name="heading">Welcome, \nThis app will help you to send the sms you provide to the contact you enter by "one tap" with a flash</string>
    <string name="enter_number">Enter the phone number or browse contacts</string>
    <string name="enter_number_hint">9182572845</string>
    <string name="enter_text_hint">--- Enter the message here ---\n Mom, I\'ve reached</string>
    <string name="enter_message">Enter the message</string>
    <string name="contacts">Contact</string>
    <string name="save">SAVE</string>
    <string name="op1">WhatsApp</string>
    <string name="op2">SMS (charges apply)</string>

    <string name="snack">Check for this icon in your apps to send Fast SMS</string>

    <string name="sent">SMS Sent\n\n\nThanks for Using this app</string>

    <string name="credit1">Dedicated to all the mothers out there :)</string>
    <string name="credit2">--> Spread the tech if you like</string>

    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="no_again">Don\'t show again</string>
</resources>
