<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <LinearLayout
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="@dimen/button_padding"
        android:background="@drawable/rounded_button"
        android:elevation="@dimen/card_default_elevation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" >

        <EditText
            android:id="@+id/enter_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number_hint"
            android:textSize="@dimen/hint_size"
            android:inputType="phone"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="@dimen/button_padding"
            android:textColorHint="@color/colorPrimary" />

        <ImageButton
            android:id="@+id/browse_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contacts"
            android:padding="@dimen/button_padding"
            android:background="@drawable/rounded_button"
            android:src="@drawable/ic_contacts_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/button_padding"
        android:background="@drawable/rounded_button"
        android:elevation="@dimen/card_default_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact" >

        <EditText
            android:id="@+id/enter_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text_hint"
            android:textSize="@dimen/hint_size"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="textMultiLine"
            android:layout_margin="@dimen/button_padding"
            android:textColorHint="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/switch_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="@dimen/button_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message">

        <TextView
            android:id="@+id/op1"
            android:text="@string/op1"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/button_padding"
            android:layout_marginStart="@dimen/button_padding"
            android:layout_marginBottom="@dimen/button_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_padding"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/op2"
            android:text="@string/op2"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/button_padding"
            android:layout_marginStart="@dimen/button_padding"
            android:layout_marginBottom="@dimen/button_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="@dimen/button_padding"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@+id/switch_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit2"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/credits"/>

    <TextView
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5" />

</android.support.constraint.ConstraintLayout>